--- a/style/sass/responsive.sass
+++ b/style/sass/responsive.sass
@@ -36,13 +36,12 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
         line-height: 1.7rem //24px
     
     // MENUS --------------------------------------------
-    #side-menu, .bottom-items
-        width: 50%
-        max-width: 21.88rem //350px
     .side-menu-item
         padding: 0 0 0 2.5rem
     .dropdown-menu
         font-size: $tablet-font-size-body //primer sur le font-size bootstrap
+    .side-menu-header p
+        text-align: center
 
     // ECORIDE LOGOS ----------------------------------
     .ecoride-logo
@@ -56,6 +55,7 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
         height: 3.25rem //52px (optimal 51 < 65px)
     .header-icon
         width: 2.38rem //38px (min 28px | max 48px)
+        height: 2.38rem
         margin: 0 1.5rem
 
     // FOOTER --------------------------------------------
@@ -64,7 +64,7 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
 
     // MAIN ------------------------------------------
     .hero
-        background: url(../img/pictures/hero-medium_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll
+        background: url(../img/images/hero-medium_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll
         background-size: cover
 
     // BUTTONS ------------------------------------
@@ -98,9 +98,6 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
         color: rgba(255, 255, 255, 0.7)
         &:hover
             color: rgba(255, 255, 255, 1)
-    #side-menu, .bottom-items
-        width: 30%
-        max-width: 21.88rem //350px
     .side-menu-item
         padding: 0 0 0 3rem
         
@@ -108,7 +105,6 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
     header
         height: 3.5rem //56px (optimal 56 < 75 px)
     .header-icon
-        width: 2.75rem //44px (min 32px | max 56px)
         margin: 0 3rem
     
     // FOOTER ----------------------------------------
@@ -120,7 +116,7 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
     // MAIN ------------------------------------------
     .hero
         height: 90vh
-        background: url(../img/pictures/hero-large_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll
+        background: url(../img/images/hero-large_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll
         background-size: cover
     .homepage-badge-img-1
         width: 9.38rem //150px
