--- a/style/responsive.css
+++ b/style/responsive.css
@@ -18,13 +18,15 @@ body {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   background-color: #E7EBE3;
   color: #000000;
-  padding: 3rem 0;
+  padding: 6rem 0 0 0;
 }
 
-h1, h2, h3 {
+h1, h2 {
   font-family: Georgia, Times, serif;
   font-weight: normal;
   font-style: normal;
@@ -67,26 +69,47 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+
+.header-div-left, .header-div-right {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.header-div-left {
+  justify-content: start;
+}
+
+.header-div-right {
+  justify-content: end;
 }
 
 .header-icon {
   cursor: pointer;
-  width: 1.88rem;
-  flex: 0 0 auto;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
 }
-.header-icon__color {
-  fill: #ffffff;
+
+.menu-icon {
+  height: 2.3rem;
+}
+
+.search-icon, .modo-icon {
+  height: 1.5rem;
+}
+
+.notif-icon {
+  height: 1.8rem;
 }
 
 .ecoride-logo {
-  margin: 0 auto;
-  flex: 0 0 auto;
+  margin: auto;
   display: block;
 }
 .ecoride-logo__header {
-  width: 7.5rem;
+  width: 7rem;
 }
 .ecoride-logo__footer, .ecoride-logo__side-menu--big {
   width: 13rem;
@@ -97,53 +120,41 @@ header {
   top: -2rem;
 }
 
-.credit-banner {
-  width: 100%;
-  height: 1.5rem;
-  background-color: #91AE7B;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.credit-banner p {
-  font-size: 1rem;
-  text-align: left;
-  margin-left: 1rem;
-}
-
-.sticky {
-  position: sticky;
+.fixed {
+  position: fixed;
   top: 0;
+  width: 100%;
 }
 
 footer {
   width: 100%;
   padding: 2rem 10%;
-}
-footer a:link {
   color: #ffffff;
-  text-decoration: none;
 }
-footer a:hover {
-  text-decoration: underline;
-}
-footer a:active {
-  color: #CB974F;
-}
-footer a:visited {
-  color: #CB974F;
-}
-footer p {
-  width: 100%;
+footer .ecoride-logo__footer {
+  margin-bottom: 1rem;
 }
 
 .footer-links-div {
-  margin: 1rem auto;
+  margin: 2rem auto 1rem;
   width: 100%;
   text-align: center;
 }
 .footer-links-div a {
-  margin: 0.5rem auto;
+  margin: 0.5rem 1rem;
+}
+.footer-links-div a:link {
+  color: #ffffff;
+  text-decoration: none;
+}
+.footer-links-div a:hover {
+  text-decoration: underline;
+}
+.footer-links-div a:active {
+  color: #CB974F;
+}
+.footer-links-div a:visited {
+  color: #CB974F;
 }
 
 .dropdown-menu {
@@ -264,78 +275,6 @@ footer p {
   height: 2rem;
 }
 
-.hero {
-  width: 100%;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: url(../img/images/hero-small_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll;
-  background-size: cover;
-}
-.hero h1, .hero p {
-  margin: 0;
-}
-.hero h1 {
-  text-shadow: 0 0 0.5rem #000000;
-  margin: 0;
-}
-
-.homepage-badge-img-1 {
-  fill: #91AE7B;
-  width: 8.75rem;
-  height: 8.75rem;
-  flex: 0 0 auto;
-  margin: 1.5rem 1rem 0;
-}
-
-.homepage-badge-img-2 {
-  width: 6.88rem;
-  height: 6.88rem;
-  margin: 2rem 1rem 0;
-}
-
-#innerProfilSection {
-  width: 100%;
-  height: 2.75rem;
-  margin: 2rem 0 0 0;
-  background: transparent;
-}
-#innerProfilSection button {
-  width: 50%;
-  height: 100%;
-  margin: 0;
-  text-align: center;
-  border: #3C3730 1px solid;
-  background-color: #E7EBE3;
-}
-#innerProfilSection .profilSection-active {
-  background-color: #3C3730;
-  color: #ffffff;
-  text-decoration: underline;
-}
-
-#mesCovoiturages, #monVoitures {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  background-color: #3C3730;
-  color: #ffffff;
-}
-#mesCovoiturages p, #monVoitures p {
-  margin: 0;
-}
-
-.profil-content p {
-  margin: auto;
-}
-
-.star-rating img {
-  width: 1rem;
-  margin: 0 0.25rem;
-}
-
 .btn {
   font-family: Georgia, Times, serif;
   font-weight: normal;
@@ -398,23 +337,6 @@ footer p {
   scale: 1.1;
 }
 
-.profil-picture {
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  flex: 0 0 auto;
-}
-.profil-picture__header {
-  width: 1.88rem;
-}
-.profil-picture__side-menu {
-  width: 6rem;
-}
-.profil-picture__profil {
-  width: 7rem;
-  border: #5E564C 1px solid;
-}
-
 @media screen and (min-width: 768px) {
   body {
     font-size: 1.06rem;
@@ -437,7 +359,7 @@ footer p {
     text-align: center;
   }
   .ecoride-logo__header {
-    max-width: 8.5rem;
+    width: 8rem;
   }
   .ecoride-logo__side-menu--big, .ecoride-logo__footer {
     width: 14rem;
@@ -446,9 +368,22 @@ footer p {
     height: 3.25rem;
   }
   .header-icon {
-    width: 2.38rem;
-    height: 2.38rem;
-    margin: 0 1.5rem;
+    margin: 0 0.75rem;
+  }
+  .menu-icon {
+    height: 2.4rem;
+  }
+  .search-icon, .modo-icon {
+    height: 1.7rem;
+  }
+  .notif-icon {
+    height: 2.1rem;
+  }
+  .header-div-left {
+    margin-left: 1rem;
+  }
+  .header-div-right {
+    margin-right: 1rem;
   }
   .footer-links-div {
     margin: 1.5rem 0 1rem;
@@ -456,6 +391,9 @@ footer p {
   .hero {
     background: url(../img/images/hero-medium_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll;
     background-size: cover;
+  }
+  .profil-content p {
+    text-align: center;
   }
   .btn-lg {
     height: 3rem;
@@ -467,7 +405,7 @@ footer p {
     font-size: 1.12rem;
   }
   main {
-    margin: 1rem 4rem 2rem;
+    margin: 6rem 4rem 2rem;
   }
   h1 {
     font-size: 3rem;
@@ -476,7 +414,7 @@ footer p {
     width: 80%;
   }
   .ecoride-logo__header {
-    max-width: 9.5rem;
+    width: 9rem;
   }
   .ecoride-logo__side-menu--big, .ecoride-logo__footer {
     width: 15rem;
@@ -494,7 +432,13 @@ footer p {
     height: 3.5rem;
   }
   .header-icon {
-    margin: 0 3rem;
+    margin: 0 1rem;
+  }
+  .header-div-left {
+    margin-left: 2rem;
+  }
+  .header-div-right {
+    margin-right: 2rem;
   }
   footer {
     padding: 2rem 20%;
@@ -518,5 +462,21 @@ footer p {
   }
   .cta {
     font-size: 1.75rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  .ecoride-logo__header {
+    display: none;
+  }
+  #side-menu, .bottom-items {
+    width: 100%;
+  }
+  .close-button {
+    transform: translateX(-2rem);
+  }
+}
+@media screen and (max-width: 230px) {
+  .modo-icon {
+    display: none;
   }
 }/*# sourceMappingURL=responsive.css.map */
